--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,9 @@ dependencies:
     sdk: flutter
   flutter_riverpod: ^2.5.1
   flutter_screenutil: ^5.9.0
+  fluttertoast: ^8.2.4
   google_fonts: ^6.1.0
+  provider: ^6.1.2
   riverpod: ^2.5.1
 
 dev_dependencies:
